--- a/javascript-nodejs/package.json
+++ b/javascript-nodejs/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "RabbitMQ amqplib tutorial ",
   "dependencies": {
-    "amqplib": "latest",
+    "amqplib": "^0.10.4",
     "js-beautify": "^1.9.1",
     "url-parse": ">=1.5.9"
   }
